--- a/index.html
+++ b/index.html
@@ -2,8 +2,17 @@
 <html>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<div style="background-color:black; width:100%; text-align:center;">
+  <div style="width:100%; text-align:center;">
+    <p>We Build What<br>
+  Inhouse Performance Marketers<br>
+  Dream Of
+    </p>
+  </div>
+  <div style="width:100%; text-align; center">
+    <img src="https://cdn.shopify.com/s/files/1/0337/2898/7195/files/White_tiny_cult_one_line.png?v=1679939479">
+   </div>
+</div>
 
 </body>
 </html>
