--- a/index.html
+++ b/index.html
@@ -1,18 +1,55 @@
 <!DOCTYPE html>
 <html>
+  
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital@1&display=swap" rel="stylesheet">
+   <head>
+      
 <body>
 
-<div style="background-color:black; width:100%; text-align:center;">
-  <div style="width:100%; text-align:center;">
-    <p>We Build What<br>
+<div class="wrapper">
+  <div class="tagline-container">
+    <p class="tagline">We Build What<br>
   Inhouse Performance Marketers<br>
   Dream Of
     </p>
   </div>
-  <div style="width:100%; text-align; center">
-    <img src="https://cdn.shopify.com/s/files/1/0337/2898/7195/files/White_tiny_cult_one_line.png?v=1679939479">
+  <div class="image-container">
+    <img class="image" src="https://cdn.shopify.com/s/files/1/0337/2898/7195/files/tinycultblacklogo.png?v=1679940450">
    </div>
 </div>
 
 </body>
 </html>
+
+
+<style>
+  
+ .wrapper {
+   width: 100%;
+   max-width: 100%;
+  }
+  
+  .tagline-container {
+   text-align:center;
+  }
+  
+  .tagline {
+   font-family: 'Montserrat', sans-serif;
+    font-size: 16px;
+  }
+  
+  .image-container {
+   text-align:center; 
+   margin-top:10px; 
+  }
+  
+  .image {
+   width: 100%;
+    max-width: 100%;
+  }
+  
+  
+</style>
