--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   
   @media only screen and (min-width: 767px) {
   #desktop-image-container {
-    display:initial;
+    display:initial!important;
   }
     
     #mobile-image-container {
