--- a/index.html
+++ b/index.html
@@ -54,15 +54,16 @@
     max-width: 100%;
   }
   
-  @media only screen and (min-width: 767px) {
-  #desktop-image-container {
+  @media screen and (min-width: 767px) {
+  
+    #desktop-image-container {
     display:initial!important;
-  }
+    }
     
     #mobile-image-container {
       display:none;
     }
-}
+  }
   
   
 </style>
