--- a/index.html
+++ b/index.html
@@ -67,6 +67,14 @@
     #mobile-image-container {
       display:none;
     }
+    
+    .tagline {
+     font-size: 28px;
+    }
+    
+    .tagline-container {
+      padding-top: 15%;
+    }
   }
   
   
