--- a/index.html
+++ b/index.html
@@ -37,11 +37,12 @@
   
   .tagline-container {
    text-align:center;
+    padding-top:35%;
   }
   
   .tagline {
    font-family: 'Montserrat', sans-serif;
-    font-size: 16px;
+    font-size: 42px;
   }
   
   .image-container {
