--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
+    
+    <link rel="icon" type="image/png" href="https://cdn.shopify.com/s/files/1/0337/2898/7195/files/favicon.png?v=1679943467"/>
+<link rel="icon" type="image/png" href="https://cdn.shopify.com/s/files/1/0337/2898/7195/files/favicon.png?v=1679943467"/>
    <head>
       
 <body>
