--- a/index.html
+++ b/index.html
@@ -25,6 +25,11 @@
   <div class="image-container" id="desktop-image-container">
     <img class="image" src="https://cdn.shopify.com/s/files/1/0337/2898/7195/files/tinycultblacklogo.png?v=1679940450">
    </div>
+  <div class="tagline-container">
+    <p class="tagline">Yes, this is holding page 😛 <br>
+      For more info, here's a <a href="https://docs.google.com/presentation/d/1ZH3JsOs4bU6sXpKUgbnxKOwgUeG1GmFpoRlEs4SbhSc/edit?usp=sharing">link to a Gslides overview</a>
+    </p>
+  </div>
 </div>
 
 </body>
