--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <img class="image" src="https://cdn.shopify.com/s/files/1/0337/2898/7195/files/tinycultblacklogo.png?v=1679940450">
    </div>
   <div class="tagline-container">
-    <p class="tagline">Yes, this is holding page 😛 <br>
+    <p class="tagline" id="gslides-p">Yes, this is holding page 😛 <br>
       For more info, here's a <a href="https://docs.google.com/presentation/d/1ZH3JsOs4bU6sXpKUgbnxKOwgUeG1GmFpoRlEs4SbhSc/edit?usp=sharing">link to a Gslides overview</a>
     </p>
   </div>
@@ -67,6 +67,10 @@
     max-width: 100%;
   }
   
+  #gslides-p {
+   font-size: 26px; 
+  }
+  
   @media screen and (min-width: 1080px) {
   
     #desktop-image-container {
@@ -84,6 +88,7 @@
     .tagline-container {
       padding-top: 15%;
     }
+    
   }
   
   
