--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
    </div>
   <div class="tagline-container">
     <p class="tagline" id="gslides-p">Yes, this is holding page 😛 <br>
-      For more info, here's a <a href="https://docs.google.com/presentation/d/1ZH3JsOs4bU6sXpKUgbnxKOwgUeG1GmFpoRlEs4SbhSc/edit?usp=sharing">link to a Gslides overview</a>
+      For more info, here's a <a href="https://docs.google.com/presentation/d/1ZH3JsOs4bU6sXpKUgbnxKOwgUeG1GmFpoRlEs4SbhSc/edit?usp=sharing" target="_blank">link to a Gslides overview</a>
     </p>
   </div>
 </div>
