--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
     <img class="image" src="https://cdn.shopify.com/s/files/1/0337/2898/7195/files/tinycultblacklogo.png?v=1679940450">
    </div>
   <div class="tagline-container">
-    <p class="tagline" id="gslides-p">Yes, this is holding page 😛 <br>
-      For more info, here's a <a href="https://docs.google.com/presentation/d/1ZH3JsOs4bU6sXpKUgbnxKOwgUeG1GmFpoRlEs4SbhSc/edit?usp=sharing" target="_blank">link to a Gslides overview</a>
+    <p class="tagline" id="gslides-p">
+      For more info, here's a <a href="https://docs.google.com/presentation/d/1ZH3JsOs4bU6sXpKUgbnxKOwgUeG1GmFpoRlEs4SbhSc/edit?usp=sharing" target="_blank">link to a Google Slides overview</a>
     </p>
   </div>
 </div>
