--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 <div class="wrapper">
   <div class="tagline-container">
     <p class="tagline">We Build What<br>
-  Inhouse Performance Marketers<br>
-  Dream Of
+      Performance Marketers<br>
+      Dream Of
     </p>
   </div>
   <div class="image-container" id="mobile-image-container">
