--- a/index.html
+++ b/index.html
@@ -8,7 +8,17 @@
     
     <link rel="icon" type="image/png" href="https://cdn.shopify.com/s/files/1/0337/2898/7195/files/favicon_3cbd757f-c212-465f-8072-dccc064acc0e.png?v=1679943618"/>
 <link rel="icon" type="image/png" href="https://cdn.shopify.com/s/files/1/0337/2898/7195/files/favicon_3cbd757f-c212-465f-8072-dccc064acc0e.png?v=1679943618"/>
-   <head>
+  <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6K2EHFLR9Z"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6K2EHFLR9Z');
+</script> 
+  
+  </head>
       
 <body>
 
