--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
 <div class="wrapper">
   <div class="tagline-container">
-    <p class="tagline">We Build What<br>
-      Performance Marketers<br>
-      Dream Of
+    <p class="tagline">We build what<br>
+      performance marketers<br>
+      dream of
     </p>
   </div>
   <div class="image-container" id="mobile-image-container">
