--- a/index.html
+++ b/index.html
@@ -35,11 +35,11 @@
   <div class="image-container" id="desktop-image-container">
     <img class="image" src="https://cdn.shopify.com/s/files/1/0337/2898/7195/files/tinycultblacklogo.png?v=1679940450">
    </div>
-  <div class="tagline-container">
+<!--   <div class="tagline-container">
     <p class="tagline" id="gslides-p">
       For more info, here's a <a href="https://docs.google.com/presentation/d/1ZH3JsOs4bU6sXpKUgbnxKOwgUeG1GmFpoRlEs4SbhSc/edit?usp=sharing" target="_blank">link to a Google Slides overview</a>
     </p>
-  </div>
+  </div> -->
 </div>
 
 </body>
